text align issues

--- a/style.css
+++ b/style.css
@@ -9,10 +9,10 @@ body {
 	font-family: "Cutive Mono", Courier, serif;
 	font-size: 12pt;
 	font-size: 1em;
-	text-align: left;
+	text-align: justify;
 	line-height: 1.5em;
 	margin: 0px auto;
-	padding: 0px 100px;
+	padding: 5px;
 	width: auto;
 	min-width: 300px;
 	float: none;
@@ -290,9 +290,11 @@ img {
 @media screen and (min-width: 700px) {
 
 body {
+	padding: 0px 50px;
 	max-width: 800px;
 	font-size: 14px;
 	font-size: 1em;
+	text-align: left;
 	}
 	
 #header {
@@ -339,8 +341,10 @@ blockquote {
 @media screen and (min-width: 1050px) {
 	
 body {
+	padding: 0px 50px;
 	font-size: 14px;
 	font-size: 1em;
+	text-align: left;
 	}
 
 #content {
